Fixed a small bug with the reply comments, where the comments were overlapping. Also added source url.

--- a/client/src/style/mango-post.css
+++ b/client/src/style/mango-post.css
@@ -127,6 +127,52 @@
     top: 10px;
     width: 229px;
 }
+.post-comment-container {
+    /*position: absolute;*/
+    /*top: 120px;*/
+    /*left: 130px;*/
+    /*right: 5%;*/
+    /*height: 180px;*/
+    /*width: 475px;*/
+    /*background: rgba(176, 196, 222, 0.35);*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*overflow-y: hidden;*/
+    /*border-radius: 10px;*/
+    align-items: flex-start;
+    align-self: flex-end;
+    background-color: var(--celtic-3);
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
+    height: 74px;
+    justify-content: flex-start;
+    margin-right: 4.0px;
+    margin-top: 10px;
+    overflow: hidden;
+    padding: 3px 0;
+    position: relative;
+    width: 288px;
+}
+
+.post-comment-container::-webkit-scrollbar-track {
+    border: none;
+    padding: 2px 0;
+    background: rgba(240, 248, 255, 0.3);
+}
+
+.post-comment-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.post-comment-container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0,0,0,.01);
+    background-color: rgba(240, 255, 255, 0.6);
+    border: none;
+}
 
 .mango-post-reply {
     /*align-items: flex-start;*/
@@ -138,7 +184,7 @@
     display: flex;
     flex-direction: column;
     /*flex-shrink: 1;*/
-    height: 74px;
+    height: auto;
     justify-content: flex-start;
     margin-right: 4.0px;
     margin-bottom: 10px;
@@ -191,7 +237,7 @@
     display: flex;
     flex-direction: row;
     flex-shrink: 1;
-    height: 40px;
+    height: auto;
     justify-content: flex-start;
     margin-left: 13px;
     margin-top: 0px;
