--- a/client/src/style/style.mangoPost.css
+++ b/client/src/style/style.mangoPost.css
@@ -90,54 +90,6 @@
     flex-direction: column;
     justify-content: center;
 }
-
-.post-comment-container {
-    /*position: absolute;*/
-    /*top: 120px;*/
-    /*left: 130px;*/
-    /*right: 5%;*/
-    /*height: 180px;*/
-    /*width: 475px;*/
-    /*background: rgba(176, 196, 222, 0.35);*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*overflow-y: hidden;*/
-    /*border-radius: 10px;*/
-    align-items: flex-start;
-    align-self: flex-end;
-    background-color: var(--celtic-3);
-    border-radius: 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 1;
-    height: 74px;
-    justify-content: flex-start;
-    margin-right: 4.0px;
-    margin-top: 10px;
-    overflow: hidden;
-    padding: 3px 0;
-    position: relative;
-    width: 288px;
-}
-
-.post-comment-container::-webkit-scrollbar-track {
-    border: none;
-    padding: 2px 0;
-    background: rgba(240, 248, 255, 0.3);
-}
-
-.post-comment-container::-webkit-scrollbar {
-    width: 10px;
-}
-
-.post-comment-container::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0,0,0,.01);
-    background-color: rgba(240, 255, 255, 0.6);
-    border: none;
-}
-
 .post-comment-box {
     margin-top: 10px;
     margin-bottom: 10px;
